[tool.poetry]
name = "langgaph-course"
version = "0.1.0"
description = ""
authors = ["Eden Marco <emarco177@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
langchainhub = "^0.1.15"
chromadb = "^0.5.0"
tavily-python = "^0.3.3"
python-dotenv = "^1.0.1"
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.0"
langgraph-cli = "^0.1.35"
langchain = "^0.2.1"
langgraph = "^0.0.61"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.8"
langchain-community = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
